--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -86,7 +86,7 @@ var configuration = {"rendererBaseUrl":"\/\/renderer.qmerce.com","randomBaseUrl"
 </li>
 <li id="menu-item-430" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-430"><a href="/pricing">Pricing</a></li>
 <li id="menu-item-431" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-431"><a href="/stories/publishers">Stories</a></li>
-<li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-432"><a href="#toggleabout">About</a>
+<li id="menu-item-432" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-432"><a href="javascript:;">About</a>
 <ul class="sub-menu">
 	<li id="menu-item-1287" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1287"><a href="/our-team">Our team</a></li>
 	<li id="menu-item-941" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-941"><a href="/press">Press</a></li>
